# yumemi

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  flake.nix  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
debian/: changelog  control  copyright  gbp.conf  rules
docs/: Makefile  api.rst  cli.rst  conf.py  example.rst  index.rst
nix/: rhash-paths.patch  rhash.nix  yumemi.nix
src/yumemi/: __init__.py  anidb.py  cli.py  exceptions.py
src/yumemi/_rhash/: libname.py  rhash.py
tests/: mock_server.py  test_anidb.py  test_cli.py  test_ed2k.py
yumemi/: __init__.py  anidb.py  cli.py  ed2k.py  exceptions.py
